# SemPOSIX

./: CLAUDE.md  Cargo.toml  DEMO.md  README.md  SEMPOSIX.md  setup-ubuntu.sh
.github/workflows/: ci.yml  coverage.yml  docs.yml  release-plz.yml  security.yml
crates/ragfs-chunker/src/: fixed.rs
crates/ragfs-core/src/: types.rs
crates/ragfs-fuse/src/: filesystem.rs  inode.rs  semantic.rs
crates/ragfs-index/src/: indexer.rs
crates/ragfs-python/: CHANGELOG.md
crates/ragfs-query/src/: executor.rs
crates/ragfs-store/src/: lancedb.rs  memory.rs  schema.rs
crates/ragfs/benches/: search.rs
crates/ragfs/src/: main.rs
crates/ragfs/tests/: pipeline_test.rs
