[workspace]
resolver = "2"
members = [
    "crates/ragfs",
    "crates/ragfs-core",
    "crates/ragfs-fuse",
    "crates/ragfs-index",
    "crates/ragfs-chunker",
    "crates/ragfs-embed",
    "crates/ragfs-extract",
    "crates/ragfs-store",
    "crates/ragfs-query",
]

[workspace.package]
version = "0.2.0"
authors = ["Venere Labs"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Venere-Labs/ragfs"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates (default-features = false for proper feature propagation)
ragfs-core = { path = "crates/ragfs-core" }
ragfs-fuse = { path = "crates/ragfs-fuse", default-features = false }
ragfs-index = { path = "crates/ragfs-index", default-features = false }
ragfs-chunker = { path = "crates/ragfs-chunker" }
ragfs-embed = { path = "crates/ragfs-embed", default-features = false }
ragfs-extract = { path = "crates/ragfs-extract", default-features = false }
ragfs-store = { path = "crates/ragfs-store", default-features = false }
ragfs-query = { path = "crates/ragfs-query", default-features = false }
ragfs-python = { path = "crates/ragfs-python", default-features = false }

# Python bindings
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
async-trait = "0.1"
futures = "0.3"

# FUSE
fuser = "0.16"

# File watching
notify = "8.2"
notify-debouncer-full = "0.6"

# Vector store
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"

# Embeddings
# embed_anything = "0.5"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = "0.22"

# PDF parsing
pdf-extract = "0.10"
lopdf = "0.38"
pdf_oxide = "0.2"

# Compression
flate2 = "1.1"

# Image processing
image = "0.25"

# Code parsing
tree-sitter = "0.26.3"

# Tokenization
tiktoken-rs = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Daemonization
daemonize = "0.5"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
mime_guess = "2.0"

# Testing
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
# Enable warning groups with priority -1 (lower than individual lints)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that are too pedantic for this codebase
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Allow patterns that are design choices
assertions_on_constants = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
ptr_arg = "allow"
manual_let_else = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
ref_option = "allow"
match_same_arms = "allow"
needless_range_loop = "allow"
assigning_clones = "allow"
format_push_string = "allow"
wildcard_in_or_patterns = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
float_cmp = "allow"
needless_lifetimes = "allow"
items_after_statements = "allow"
default_trait_access = "allow"
ignore_without_reason = "allow"
match_wildcard_for_single_variants = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
unnecessary_literal_bound = "allow"
